--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<meta http-equiv="Refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+<meta http-equiv="Refresh" content="0; url=https://bhashax.krishyadav.com/" />
 </body>
 </html>
